cmake_minimum_required(VERSION 2.8)
project(SpeechControlDaemon)

## Variables!
set(SPCHCNTRL_DAEMON_COMPILE_FLAGS ${SPCHCNTRL_APP_COMPILE_FLAGS})
set(SPCHCNTRL_DAEMON_COMPILE_DEFINITIONS ${SPCHCNTRL_APP_COMPILE_DEFINITIONS})
set(SPCHCNTRL_DAEMON_INCLUDE_DIRS ${SPCHCNTRL_LIB_INCLUDE_DIRS})
set(SPCHCNTRL_DAEMON_LIBRARIES ${SPCHCNTRL_LIB_LIBRARIES}
    speechcontrol)

## Work on source code
file(GLOB SPCHCNTRL_DAEMON_SRCS "*.cpp")
QT4_AUTOMOC(${SPCHCNTRL_DAEMON_SRCS})


include_directories(${SPCHCNTRL_DAEMON_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR})


## The target!
add_executable(speechcontrold ${SPCHCNTRL_DAEMON_SRCS})
target_link_libraries(speechcontrold ${SPCHCNTRL_DAEMON_LIBRARIES})
set_target_properties(speechcontrold PROPERTIES
    COMPILE_FLAGS "${SPCHCNTRL_DAEMON_COMPILE_FLAGS}"
    COMPILE_DEFINITIONS "${SPCHCNTRL_DAEMON_COMPILE_DEFINITIONS}")

## Installs
install(TARGETS speechcontrold
        DESTINATION ${SPCHCNTRL_BIN_DIR})