cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_DESKTOPCONTROL_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_APP_SHPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_DESKTOPCONTROL_APP_SCPP ${SPCHCNTRL_DESKTOPCONTROL_APP_SHPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_DESKTOPCONTROL_APP_SCPP})

install(FILES ${SPCHCNTRL_DESKTOPCONTROL_APP_SHPP}
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/desktopcontrol"
        COMPONENT "dev")