cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_DICTATION_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_DICTATION_APP_SHPP "*.hpp")

list(APPEND SPCHCNTRL_APP_SHPP ${SPCHCNTRL_DICTATION_APP_SHPP})
list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_DICTATION_APP_SCPP})

QT4_WRAP_CPP(SPCHCNTRL_DICTATION_APP_SCPP ${SPCHCNTRL_DICTATION_APP_SHPP})

install(FILES ${SPCHCNTRL_DICTATION_APP_SHPP}
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/dictation"
        COMPONENT "dev")
