file(GLOB SPCHCNTRL_PLUGINS_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_PLUGINS_APP_SHPP "*.hpp")

list(APPEND SPCHCNTRL_APP_SHPP ${SPCHCNTRL_PLUGINS_APP_SHPP})
list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_PLUGINS_APP_SCPP})

QT4_WRAP_CPP(SPCHCNTRL_PLUGINS_APP_SCPP ${SPCHCNTRL_PLUGINS_APP_SHPP})

install(FILES ${SPCHCNTRL_PLUGINS_APP_SHPP}
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/plugins"
        COMPONENT "dev")
