cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_SESSIONS_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_SESSIONS_APP_SHPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_SESSIONS_APP_SCPP ${SPCHCNTRL_SESSIONS_APP_SHPP})

list(APPEND SPCHCNTRL_APP_SHPP ${SPCHCNTRL_SESSIONS_APP_SHPP})
list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_SESSIONS_APP_SCPP})

install(FILES ${SPCHCNTRL_SESSIONS_APP_SHPP}
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/sessions"
        COMPONENT "dev")
