file(GLOB SPCHCNTRL_WINDOWS_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_WINDOWS_APP_SHPP "*.hpp")

list(APPEND SPCHCNTRL_APP_SHPP ${SPCHCNTRL_WINDOWS_APP_SHPP})
list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_WINDOWS_APP_SCPP})

add_subdirectory(managers)
add_subdirectory(settings)

install(FILES ${SPCHCNTRL_DC_APP_SHPP}
        DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/windows"
        COMPONENT "dev")
