cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_WIZARDS_APP_SCPP "*.cpp")
file(GLOB SPCHCNTRL_WIZARDS_APP_SHPP "*.hpp")

qt4_wrap_cpp(SPCHCNTRL_WIZARDS_APP_SCPP ${SPCHCNTRL_WIZARDS_APP_SHPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_WIZARDS_APP_SCPP})

add_subdirectory(quickstart)
#add_subdirectory(session-create)

install(FILES ${SPCHCNTRL_WIZARDS_APP_SHPP}
    DESTINATION "${SPCHCNTRL_APP_INCLUDE_DIR}/wizards"
    COMPONENT "dev")
